# inverse_spectral_camera

./: .gitmodules  CMakeLists.txt  README.md  adam.h  checker.cpp  checker.h  imageutils.cpp  imageutils.h  main.cpp  spectrum.cpp  spectrum.h
